# api/criteria-model/src/main/java/br/com/sas/travel/criteria/model/AccommodationType.java
@@ -1,0 +1,15 @@
+package br.com.sas.travel.criteria.model;
+
+public enum AccommodationType {
+
+	APARTMENT_HOTEL,
+	B_AND_B,
+	BOUTIQUE_HOTEL,
+	GUEST_HOUSE,
+	HOSTEL,
+	HOTEL,
+	INN,
+	RESORT,
+	VACATION_RENTAL,
+
+}
