# api/criteria-model/src/main/java/br/com/sas/travel/criteria/model/LanguageProficiency.java
@@ -1,0 +1,12 @@
+package br.com.sas.travel.criteria.model;
+
+import lombok.Data;
+
+@Data
+public class LanguageProficiency {
+
+	private String language;
+
+	private Proficiency proficiency;
+
+}
