# api/criteria-model/src/main/java/br/com/sas/travel/criteria/model/TemperatureRange.java
@@ -1,0 +1,14 @@
+package br.com.sas.travel.criteria.model;
+
+import java.math.BigDecimal;
+
+import lombok.Data;
+
+@Data
+public class TemperatureRange {
+
+	private BigDecimal min;
+
+	private BigDecimal max;
+
+}
