# api/travel-service/src/main/java/br/com/sas/travel/planner/controller/TravelPlannerController.java
@@ -1,32 +1,35 @@
 package br.com.sas.travel.planner.controller;
 
-import org.openapitools.api.TravelApi;
-import org.openapitools.model.TravelPlanningCriteria;
-import org.openapitools.model.TravelPlanningRequest;
-import org.openapitools.model.TravelPlanningResponse;
 import org.springframework.http.ResponseEntity;
-import org.springframework.web.bind.annotation.RestController;
+import org.springframework.stereotype.Component;
 import org.springframework.web.server.ServerWebExchange;
 
+import br.com.sas.travel.planner.api.TravelApiDelegate;
+import br.com.sas.travel.planner.api.model.TravelPlanningRequest;
+import br.com.sas.travel.planner.api.model.TravelPlanningResponse;
+import br.com.sas.travel.planner.service.TravelService;
+import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import reactor.core.publisher.Flux;
 import reactor.core.publisher.Mono;
 
 @Slf4j
-@RestController
-public class TravelPlannerController implements TravelApi {
+@RequiredArgsConstructor
+@Component
+public class TravelPlannerController implements TravelApiDelegate {
 
-	@Override public Mono<ResponseEntity<Flux<TravelPlanningResponse>>> travelPost(Mono<TravelPlanningRequest> travelPlanningRequest,
+	private final TravelService service;
+
+	private final TravelPlanningMapper mapper;
+
+	@Override
+	public Mono<ResponseEntity<Flux<TravelPlanningResponse>>> travelPost(Mono<TravelPlanningRequest> travelPlanningRequest,
 			ServerWebExchange exchange) {
-		return TravelApi.super.travelPost(travelPlanningRequest, exchange);
-	}
 
-	public ResponseEntity<TravelPlanningResponse> travelPost(TravelPlanningRequest request) {
-		return ResponseEntity.ok(new TravelPlanningResponse()
-				.type(TravelPlanningResponse.TypeEnum.CRITERIA)
-				.data(new TravelPlanningCriteria()
-						.searchTerm(request.getSearchTerm())));
-
+		return travelPlanningRequest
+				.map(TravelPlanningRequest::getSearchTerm)
+				.map(service::plan)
+				.map(mapper::apply)
+				.map(ResponseEntity::ok);
 	}
 }
-
