# api/travel-service/src/main/java/br/com/sas/travel/planner/model/TravelDataType.java
@@ -1,0 +1,19 @@
+package br.com.sas.travel.planner.model;
+
+public enum TravelDataType {
+
+	CRITERIA,
+
+	DESTINATION,
+
+	FLIGHTPLAN,
+
+	ACCOMMODATION,
+
+	ACTIVITY,
+
+	TRAVELTIP,
+
+	OPTIMAL;
+
+}
